# rsnumpy

./: .gitignore  Cargo.toml  README.md  gitset.sh  plots.py  pyproject.toml  rsnum.code-workspace
.github/: ci.yml
.github/workflows/: rust-clippy.yml
python/rsnumpy/: __init__.py  array_methods.py  array_ops.py  io.py  math_functions.py  matlib.py  statistics.py
python/rsnumpy/linalg/: __init__.py
python/rsnumpy/polynomial/: __init__.py
python/rsnumpy/random/: __init__.py
rsnum/: __init__.py  array_methods.py  array_ops.py  math_functions.py  statistics.py
rsnum/linalg/: __init__.py
rsnum/random/: __init__.py
rsnum1/: __init__.py  array_methods.py  array_ops.py  io.py  math_functions.py  statistics.py
rsnum1/polynomial/: __init__.py
rsnum1/random/: __init__.py
src/: fft.rs  indexing.rs  lib.rs  linalg.rs  random.rs
wheelhouse/: rsnum-0.1.2-cp313-cp313-macosx_11_0_arm64.whl
