[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "rsnum"
requires-python = ">=3.8"
description = "A Rust-powered NumPy-compatible array library."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "xlrd>=2.0.2",
]

[tool.maturin]
module-name = "rsnum._core"
include = ["rsnum/__init__.py", "rsnum/linalg/__init__.py", "rsnum/random/__init__.py"]
