[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "rsnumpy"
version = "0.1.6"
requires-python = ">=3.8"
description = "A Rust-powered NumPy-compatible array library."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "YJ-Niu" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
module-name = "rsnumpy._core"
python-source = "python"
include = ["python/rsnumpy/__init__.py", "python/rsnumpy/linalg/__init__.py", "python/rsnumpy/random/__init__.py"]
